Updated queue services to swagger
