# server/api/routes/routes.js
@@ -1,7 +1,8 @@
 'use strict';
 
 var signController = require('./../controllers/sign.js'),
-    logger = require('./../lib/logger.js').get('routes');
+placeController = require('./../controllers/place.js'),
+logger = require('./../lib/logger.js').get('routes');
 
 var appRouter = function (app, database) {
 
@@ -12,6 +13,18 @@ var appRouter = function (app, database) {
 
     app.post("/signup", function (req, res) {
         signController.signUp(database, req.body, res);
+    });
+
+    app.post("/place/create", function (req, res) {
+    	placeController.create(database, req.body, res);
+    });
+
+    app.post("/place/post", function (req, res) {
+    	placeController.post(database, req.body, res);
+    });
+
+    app.post("/place/receive", function (req, res) {
+    	placeController.receive(database, req.body, res);
     });
 
 };
