# server/api/swagger/swagger.yaml
@@ -65,6 +65,75 @@ paths:
           schema:
             $ref: '#/definitions/User'
 
+  /place/create:
+    x-swagger-router-controller: place
+    post:
+      description: Register a new place and create corresponding Topic to publish/subscrible messages.
+      parameters:
+        - name: place
+          in: body
+          description: Place co-ordinates and topic
+          schema:
+            $ref: '#/definitions/Place'
+          required: true
+      tags:
+        - Place
+      responses:
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        200:
+          description: Place Created
+          schema:
+            $ref: '#/definitions/Place'
+
+  /place/post:
+    x-swagger-router-controller: place
+    post:
+      description: Publish messages to topic
+      parameters:
+        - name: message
+          in: body
+          description: Publish message to topic
+          schema:
+            $ref: '#/definitions/Message'
+          required: true
+      tags:
+        - Message
+      responses:
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        200:
+          description: Message Posted
+          schema:
+            $ref: '#/definitions/Message'
+
+  /place/receive:
+    x-swagger-router-controller: place
+    post:
+      description: Subscribe topic for messages
+      parameters:
+        - name: subscribe
+          in: body
+          description: Subscribe topic to messages
+          schema:
+            $ref: '#/definitions/Subscribe'
+          required: true
+      tags:
+        - Subscribe
+      responses:
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        200:
+          description: Message Subscribed
+          schema:
+            $ref: '#/definitions/Subscribe'
+
   /swagger:
       x-swagger-pipe: swagger_raw
 
@@ -84,3 +153,30 @@ definitions:
         type: string
       password:
         type: string
+
+  Place:
+    type: object
+    properties:
+      name:
+        type: string
+      longitude:
+        type: string
+      latitude:
+        type: string
+      createdBy:
+        type: string
+
+  Message:
+    type: object
+    properties:
+      queueName:
+        type: string
+      message:
+        type: string
+  
+  Subscribe:
+    type: object
+    properties:
+      queueName:
+        type: string
+           
